--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,130 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  font-size: 16px;
+}
+
+.c-font-xs {
+  font-size: 12px;
+}
+
+.c-font-sm {
+  font-size: 14px;
+}
+
+.c-font-base {
+  font-size: 16px;
+}
+
+.c-font-md {
+  font-size: 1.125rem;
+}
+
+.c-font-lg {
+  font-size: 1.266rem;
+}
+
+.c-font-xl {
+  font-size: 1.424rem;
+}
+
+.c-font-2xl {
+  font-size: 1.602rem;
+}
+
+.c-font-3xl {
+  font-size: 1.802rem;
+}
+
+.c-font-4xl {
+  font-size: 2.027rem;
+  line-height: 2.75rem;
+}
+
+.containerRaw {
+  padding: 0 1.5rem;
+  max-width: 480px;
+  margin: auto;
+}
+
+@media screen and (min-width: 640px) {
+  .c-font-md {
+    font-size: 1.2rem;
+  }
+
+  .c-font-lg {
+    font-size: 1.44rem;
+  }
+
+  .c-font-xl {
+    font-size: 1.728rem;
+  }
+
+  .c-font-2xl {
+    font-size: 2.074rem;
+  }
+
+  .c-font-3xl {
+    font-size: 2.448rem;
+  }
+
+  .c-font-4xl {
+    font-size: 2.986rem;
+    line-height: 4.25rem;
+  }
+}
+
+@media screen and (min-width: 998px) {
+  .c-font-md {
+    font-size: 1.25rem;
+  }
+
+  .c-font-lg {
+    font-size: 1.563rem;
+  }
+
+  .c-font-xl {
+    font-size: 1.953rem;
+  }
+
+  .c-font-2xl {
+    font-size: 2.441rem;
+  }
+
+  .c-font-3xl {
+    font-size: 3.052rem;
+  }
+
+  .c-font-4xl {
+    font-size: 3.815rem;
+    line-height: 5.5rem;
+  }
+}
+
+@media screen and (min-width: 1278px) {
+  .c-font-md {
+    font-size: 1.333rem;
+  }
+
+  .c-font-lg {
+    font-size: 1.777rem;
+  }
+
+  .c-font-xl {
+    font-size: 2.369rem;
+  }
+
+  .c-font-2xl {
+    font-size: 3.157rem;
+  }
+
+  .c-font-3xl {
+    font-size: 4.209rem;
+  }
+
+  .c-font-4xl {
+    font-size: 5.61rem;
+  }
+}
