--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,8 @@ html {
 }
 
 .containerRaw {
-  padding: 0 1.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   max-width: 480px;
   margin: auto;
 }
@@ -74,6 +75,13 @@ html {
     font-size: 2.986rem;
     line-height: 4.25rem;
   }
+
+  .containerRaw {
+    padding-left: 3rem;
+    padding-right: 3rem;
+    max-width: 720px;
+    margin: auto;
+  }
 }
 
 @media screen and (min-width: 998px) {
@@ -101,6 +109,13 @@ html {
     font-size: 3.815rem;
     line-height: 5.5rem;
   }
+
+  .containerRaw {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+    max-width: 1120px;
+    margin: auto;
+  }
 }
 
 @media screen and (min-width: 1278px) {
@@ -126,5 +141,13 @@ html {
 
   .c-font-4xl {
     font-size: 5.61rem;
+    line-height: 7.5rem;
+  }
+
+  .containerRaw {
+    padding-left: 4rem;
+    padding-right: 4rem;
+    max-width: 1600px;
+    margin: auto;
   }
 }
