--- a/app/globals.css
+++ b/app/globals.css
@@ -50,6 +50,21 @@ html {
   margin: auto;
 }
 
+.logo {
+  position: relative;
+}
+
+.logo::before {
+  content: "";
+  display: inline-block;
+  height: 8px;
+  width: 8px;
+  border: solid 2px white;
+  border-radius: 100%;
+  margin-right: 0.75rem;
+  margin-bottom: 1px;
+}
+
 @media screen and (min-width: 640px) {
   .c-font-md {
     font-size: 1.2rem;
@@ -81,6 +96,13 @@ html {
     padding-right: 3rem;
     max-width: 720px;
     margin: auto;
+  }
+
+  .logo::before {
+    height: 10px;
+    width: 10px;
+    margin-right: 1rem;
+    margin-bottom: 0px;
   }
 }
 
@@ -149,5 +171,12 @@ html {
     padding-right: 4rem;
     max-width: 1600px;
     margin: auto;
+  }
+
+  .logo::before {
+    height: 12px;
+    width: 12px;
+    margin-right: 1.25rem;
+    margin-bottom: 0px;
   }
 }
