--- a/app/globals.css
+++ b/app/globals.css
@@ -65,6 +65,22 @@ html {
   margin-bottom: 1px;
 }
 
+.section--home {
+  position: relative;
+}
+
+.section--home::before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 48px;
+  width: 100%;
+  background-color: #fff8ef;
+  z-index: -50;
+}
+
 @media screen and (min-width: 640px) {
   .c-font-md {
     font-size: 1.2rem;
